robins-desk - css to prevent highlight on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,7 @@
   padding: 0;
   text-decoration: none;
   margin: 0;
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 }
 
 html {
